--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="icon" href="glug.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -24,13 +25,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
             </button>
-	        <a class="navbar-brand" href="#">GAMERS HUB</a>
+	        <a class="navbar-brand" href="#">GAMEINFO</a>
 			</div>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			        <ul class="nav navbar-nav">
-					       <li><a href="#">GAME 1</a></li>
-					       <li><a href="#">GAME 2</a></li>
-					       <li><a href="#">GAME 3</a></li>	
+					       <li><a href="#">MasterMind</a></li>
+					       <li><a href="#">Sudoku</a></li>
+					       <li><a href="#">CPP-2048</a></li>	
                            <li class="dropdown">
                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                              <ul class="dropdown-menu">
@@ -50,7 +51,7 @@
 	  
 	  <div class="jumbotron" id="jumbo">
 	       <div class="container">
-               <h2 class="white">GAMERS HUB</h2>
+               <h2 class="white">GAMEINFO</h2>
                   <p></p>
                <h3 class="white">WHERE GAMERS UNITE</h3>	
                    </br></br>	
@@ -58,7 +59,8 @@
                  </br></br>				
         <a class="btn btn-danger btn-lg" href="#" role="button">Sign Up</a>   <a class="btn btn-danger btn-lg" href="#" role="button">Already a user ? LogIn</a>
 		    </div>
-      </div>
+      </div>  
+      
 	  
  <!--JUMBOTRON ENDS-->
 <!-- after this we will make 3 links to three games in the same page-->	 
@@ -66,6 +68,6 @@
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 	
-</body>
+</body></div>
 
 </html>
