--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="icon" href="glug.ico" />
+        <link rel="icon" href="images/glug.ico" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-        <!-- Optional Bootstrap theme -->
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="game.css">
+        <link rel="stylesheet" type="text/css" href="lib/bootstrap/3.3.7/css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="css/game.css">
         <title>GameInfo</title>
     </head>
 
@@ -31,7 +29,9 @@
 			<li><a href="#">Sudoku</a></li>
 			<li><a href="#">CPP-2048</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More<span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                More<span class="caret"></span>
+                            </a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Contact Us</a></li>
                                 <li><a href="#">Other Games</a></li>
@@ -59,7 +59,7 @@
         <!--JUMBOTRON ENDS-->
 
         <!-- after this we will make 3 links to three games in the same page-->
-        <script src="js/jquery.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="js/jquery-3.1.1.min.js"></script>
+        <script src="lib/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
 </html>
