--- a/index.html
+++ b/index.html
@@ -8,30 +8,26 @@
         <link rel="stylesheet" type="text/css" href="css/game.css">
         <title>GameInfo</title>
     </head>
-
     <body>
-
         <!-- NAVBAR BEGINS -->
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
-	        <div class="navbar-header">
-		    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-	            <a class="navbar-brand" href="#">GAMEINFO</a>
-		</div>
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		    <ul class="nav navbar-nav">
-			<li><a href="#">MasterMind</a></li>
-			<li><a href="#">Sudoku</a></li>
-			<li><a href="#">CPP-2048</a></li>
+                    <a class="navbar-brand" href="#">GameInfo</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">Java Sudoku Solver</a></li>
+                        <li><a href="#">CPP 2048</a></li>
+                        <li><a href="#">Python MasterMind</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                More<span class="caret"></span>
-                            </a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Contact Us</a></li>
                                 <li><a href="#">Other Games</a></li>
@@ -44,17 +40,16 @@
         <!--NAVBAR ENDS-->
 
         <!--JUMBOTRON BEGINS-->
-	<div class="jumbotron" id="jumbo">
-	    <div class="container">
-                <h2 class="white">GAMEINFO</h2>
+        <div class="jumbotron" id="jumbo">
+            <div class="container">
+                <h2 class="white">GameInfo</h2>
                 <p></p>
                 <h3 class="white">WHERE GAMERS UNITE</h3>
-                   </br></br>
-                   <p class="white">
-                   </br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-                   <a class="btn btn-danger btn-lg" href="#" role="button">Sign Up</a>
-                   <a class="btn btn-danger btn-lg" href="#" role="button">Already a user ? LogIn</a>
-	    </div>
+                </br></br>
+                <p class="white">
+                </br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+                <a class="btn btn-danger btn-lg" href="#" role="button">Sign Up</a>   <a class="btn btn-danger btn-lg" href="#" role="button">Already a user ? LogIn</a>
+            </div>
         </div>
         <!--JUMBOTRON ENDS-->
 
