refactored index.html

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
                 <h3 class="white">WHERE GAMERS UNITE</h3>
                 </br></br>
                 <p class="white">
-                </br></br></br></br></br></br></br></br></br></br></br></br></br></br>
-                <a class="btn btn-danger btn-lg" href="#" role="button">Sign Up</a>   <a class="btn btn-danger btn-lg" href="#" role="button">Already a user ? LogIn</a>
+                <div class="button">
+                    <a class="btn btn-danger btn-lg" href="#" role="button">Sign Up</a>   <a class="btn btn-danger btn-lg" href="#" role="button">Already a user ? LogIn</a>
+                </div>
             </div>
         </div>
         <!--JUMBOTRON ENDS-->
